<resources>
    <string name="app_name">RSSOcto</string>

    <!-- TextView -->
    <string name="no_feed_message">Your feed subscription is empty.</string>
    <string name="no_article_message">No article found.</string>

    <!-- Button -->
    <string name="btn_add_feed">Add Feed</string>
    <string name="btn_add">Add</string>
    <string name="btn_share">Share</string>

    <!-- EditText -->
    <string name="et_feed_url_hint">Feed URL</string>
    <string name="et_feed_name_hint">Feed Name</string>

    <!-- Fragment Label -->
    <string name="lbl_feed_fragment">Feeds</string>
    <string name="lbl_add_feed_fragment">New Feed</string>
    <string name="lbl_settings_fragment">Settings</string>
    <string name="lbl_search_fragment">Search</string>

    <!-- Option Menu -->
    <string name="opt_delete">Delete</string>
    <string name="opt_mark_all_as_read">Mark all as read</string>
    <string name="opt_mark_all_as_unread">Mark all as unread</string>
    <string name="opt_all">All</string>
    <string name="opt_unread">Unread</string>
    <string name="opt_search">Search</string>
    <string name="opt_mark_as_read">Mark as read</string>
    <string name="opt_mark_as_unread">Mark as unread</string>
    <string name="opt_favourite">Favourite</string>
    <string name="opt_open_in_browser">Open In Browser</string>

    <!-- Bottom Navigation Menu -->
    <string name="nav_item_feeds">Feeds</string>
    <string name="nav_item_search">Search</string>
    <string name="nav_item_settings">Settings</string>

    <!-- Preference Section Headers -->
    <string name="general_header">General</string>
    <string name="appearance_header">Appearance</string>
    <string name="sync_header">Sync</string>

    <!-- General Preferences -->
    <string name="entry_filter_title">Entry default filter</string>
    <string name="entry_filter_key">filterKey</string>

    <!-- Appearance Preferences -->
    <string name="theme_title">Theme</string>
    <string name="theme_key">themeKey</string>

    <!-- Sync Preferences -->
    <string name="refresh_auto_title">Refresh feeds automatically</string>
    <string name="refresh_auto_key">refreshAutoKey</string>

    <string name="refresh_interval_title">Refresh interval</string>
    <string name="refresh_interval_key">refreshIntervalKey</string>

    <string name="refresh_startup_title">Refresh on startup</string>
    <string name="refresh_startup_summary">Refresh feeds when launching app</string>
    <string name="refresh_startup_key">refreshStartupKey</string>

    <!-- List Preference entries & values array (Theme) -->
    <string name="dark_theme">Dark</string>
    <string name="light_theme">Light</string>
    <string name="system_theme">System default</string>

    <!-- List Preference entries & values array (Filter) -->
    <string name="filter_all">All</string>
    <string name="filter_unread">Unread</string>

    <!-- List Preference entries & values array (Refresh Interval) -->
    <string name="duration_15m">15 minutes</string>
    <string name="duration_30m">30 minutes</string>
    <string name="duration_1h">1 hour</string>
    <string name="duration_2h">2 hours</string>
    <string name="duration_6h">6 hours</string>
    <string name="duration_12h">12 hours</string>
    <string name="duration_1d">1 day</string>
</resources>