<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_header">

        <ListPreference
            app:defaultValue="@string/filter_all"
            app:entries="@array/default_filter_entries"
            app:entryValues="@array/default_filter_value"
            app:key="@string/entry_filter_key"
            app:title="@string/entry_filter_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/appearance_header">

        <ListPreference
            app:defaultValue="@string/system_theme"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="@string/theme_key"
            app:title="@string/theme_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="@string/refresh_auto_key"
            app:title="@string/refresh_auto_title" />

        <ListPreference
            app:defaultValue="@string/duration_30m"
            app:dependency="refreshAuto"
            app:entries="@array/refresh_interval_entries"
            app:entryValues="@array/refresh_interval_value"
            app:key="@string/refresh_interval_key"
            app:title="@string/refresh_interval_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="@string/refresh_startup_key"
            app:summary="@string/refresh_startup_summary"
            app:title="@string/refresh_startup_title" />

    </PreferenceCategory>

</PreferenceScreen>