<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/optFavorite"
        android:checkable="true"
        android:checked="false"
        android:icon="@drawable/ic_favorite_border"
        android:title="@string/opt_favourite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/optActionMarkAsUnread"
        android:icon="@drawable/ic_unread"
        android:checkable="true"
        android:checked="false"
        android:title="@string/opt_mark_as_unread"
        app:showAsAction="always" />

    <item
        android:id="@+id/optOpenInBrowser"
        android:icon="@drawable/ic_open_in_browser"
        android:title="@string/opt_open_in_browser"
        app:showAsAction="always" />

</menu>